NextGenAppPackage/main/default/objects/Semana__c/Semana__c.object-meta.xml
<CustomObject>
    <label>Semana</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Semana Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Semanas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>