NextGenAppPackage/main/default/objects/Semana__c/fields/Numero_de_dias__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_dias__c</fullName>
    <label>Numero de dias</label>
    <summaryForeignKey>Dia__c.Semana__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>