NextGenAppPackage/main/default/objects/Semana__c/fields/Primer_dia__c.field-meta.xml
<CustomField>
    <fullName>Primer_dia__c</fullName>
    <label>Primer dia</label>
    <type>Date</type>
</CustomField>