NextGenAppPackage/main/default/objects/Semana__c/fields/Rellena__c.field-meta.xml
<CustomField>
    <fullName>Rellena__c</fullName>
    <defaultValue>false</defaultValue>
    <description>el menú semanal ha sido complertado</description>
    <label>Rellena</label>
    <type>Checkbox</type>
</CustomField>