NextGenAppPackage/main/default/objects/Semana__c/fields/Terminada__c.field-meta.xml
<CustomField>
    <fullName>Terminada__c</fullName>
    <formula>and (today()&gt; Primer_dia__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terminada</label>
    <type>Checkbox</type>
</CustomField>