NextGenAppPackage/main/default/objects/Semana__c/fields/Ultimo_dia__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_dia__c</fullName>
    <label>Último día</label>
    <type>Date</type>
</CustomField>